rollback for dark mode fix

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -4,16 +4,10 @@ body *  {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
 }
-
 h1,h2,h3,h4,h5,h6,.fade,.logo {
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 500 !important;
     font-style: normal;
     letter-spacing:-1px;
 }
-
-#blog p {
-    word-wrap: break-word;
-    margin-bottom:20px;
- }
